--- a/front/package.json
+++ b/front/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "next build && next export",
+    "lint": "next lint",
+    "dev": "next dev -p 8080",
+    "start": "next start -p 8080"
   },
   "dependencies": {
     "@types/node": "18.15.0",
