--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,24 +9,20 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/main.go",
-            "env": {
-                "PORT_HTTP": "3000"
-            },
+            "program": "${workspaceFolder}/backend/main.go",
             "args": ["-test.v"],
             "asRoot": true,
+            "envFile": "${workspaceFolder}/.vscode/.env"
         },
         {
             "name": "Run redis test",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/service/redis_test.go",
-            "env": {
-                "PORT_HTTP": "3000"
-            },
+            "program": "${workspaceFolder}/backend/service/redis_test.go",
             "args": ["-test.v"],
             "asRoot": true,
+            "envFile": "${workspaceFolder}/.vscode/.env"
         },
     ]
 }
