--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,9 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.21",
+    "tailwind-styled-components": "2.2.0",
+    "tailwindcss": "3.2.7"
   }
 }
